--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.maximum-pool-size=5
 
 ## PostgreSQL
+spring.database.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/rickandmorty_db
 spring.datasource.username=postgres
 spring.datasource.password=Drowssap#79
